BARC UAT/src/objects/Packing_List__c.object
<CustomObject>
    <fields>
        <fullName>Bill_To_Address__c</fullName>
        <label>Bill To Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bill_To_City__c</fullName>
        <label>Bill To City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Country__c</fullName>
        <label>Bill To Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Email__c</fullName>
        <label>Bill To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Bill_To_Name__c</fullName>
        <label>Bill To Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Operator</label>
        <referenceTo>Operator__c</referenceTo>
        <relationshipLabel>Packing Lists</relationshipLabel>
        <relationshipName>Packing_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_Phone__c</fullName>
        <label>Bill To Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Bill_To_Pincode__c</fullName>
        <label>Bill To Pincode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_State__c</fullName>
        <label>Bill To State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Declaration__c</fullName>
        <label>Declaration</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Mode__c</fullName>
        <label>Delivery Mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address__c</fullName>
        <label>Ship To Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <label>Ship To City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country__c</fullName>
        <label>Ship To Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Email__c</fullName>
        <label>Ship To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ship_To_Local_Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Local Operator</label>
        <referenceTo>Local_Operator__c</referenceTo>
        <relationshipLabel>Packing Lists</relationshipLabel>
        <relationshipName>Packing_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_Name__c</fullName>
        <label>Ship To Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Operator</label>
        <referenceTo>Operator__c</referenceTo>
        <relationshipLabel>Packing Lists (Ship To Operator)</relationshipLabel>
        <relationshipName>Packing_Lists1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_Phone__c</fullName>
        <label>Ship To Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ship_To_Pincode__c</fullName>
        <label>Ship To Pincode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_State__c</fullName>
        <label>Ship To State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transporter_Name__c</fullName>
        <label>Transporter Name:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Packing List</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PLN-{YYYY}-{MM}-{DD}-{0000000}</displayFormat>
        <label>Packing List Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packing Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>